2011-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-update-date-lapsed): Ensure that point stays at
	the "same place" even if point is on the line being replaced.
	(article-update-date-lapsed): Allow updating both the combined lapsed
	and the lapsed headers.
	(article-update-date-lapsed): Skip past all the X-Sent/Date headers.

2011-01-27  Julien Danjou  <julien@danjou.info>

	* mml2015.el (mml2015-epg-sign): Add and use mml2015-sign-with-sender.
	(mml2015-epg-encrypt): Use mml2015-sign-with-sender.

2011-01-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-expand-newlines, shr-previous-newline-padding-width):
	Use plist-get instead of the cl function getf.

2011-01-27  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (float-time): Get rid of compiler warning, again.

2011-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-put-color): Special-case background colours: Do put them
	at the blank parts at the front of the lines.

	* gnus-draft.el (gnus-draft-clear-marks): New function to be run as an
	exit hook to nix out all data on readedness on group exit.

	* gnus-util.el (float-time): If float-time is bound, always use it on
	all Emacsen.  It's unclear why the subrp check was there.
	(time-date): Require to make some autoload issues on XEmacs go away.

	* shr.el (shr-put-color): Don't do the box padding in tables, since
	they're already padded.

2011-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-next-page): When the last line of the
	article is displayed, scroll down once more instead of going to the
	next article at once.
	(article-lapsed-string): Refactor out and allow specifying how many
	segments you want.
	(gnus-article-setup-buffer): Start updating the lapsed header directly.
	(gnus-article-update-lapsed-header): New variable.

	* shr.el: Revert change that made headings use different-sized faces.
	The Emacs display engine isn't advanced enough that, for instance,